# OpenTRIM

./: .gitignore  CMakeLists.txt  GSoC2025.md  LICENSE  README.md  TODO.md  git_tag  pyproject.toml  python.ipynb
.github/workflows/: windows-build.yml
GSoC2026/: feature-A.md
bindings/python/: CMakeLists.txt  bindings.cpp  config_bind.cpp  driver_bind.cpp  driver_bind.h  enums_bind.cpp  info_bind.cpp  vector_casters.h
bindings/python/opentrim/: __init__.py  __init__.pyi  _opentrim_core.pyi  py.typed
build_qt_debug/: .ninja_deps  .ninja_log  build.ninja  gencorteo  genoptionsdoc  genptable  h5file.dox.md  periodic_table.cpp  qtcsettings.cmake  xs_krc_data.cpp  xs_lj_data.cpp  xs_moliere_data.cpp  xs_zbl_data.cpp
build_qt_debug/source/gui/opentrim-gui_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
cmake/: BuildConfigFile.cmake  CMakeSummary.cmake  Externals.cmake  HelperFunctions.cmake  OpenTRIMConfig.cmake.in
doc/: api.rst  conf.py  damage.md  dox.css  energy_partition.md  flightpath.md  flightpathdetails.md  gui_quick_start.md  h5file.dox.md  h5file.md  install.md  json_config.md  main.md  opentrim.dox  options.dox.md  physics.md  reproducibility.md  screened_coulomb.md  tallies.md  userdoc.md
doc/include/: h5file.dox.md  options.dox.md
examples/python/: README.md  basic_run.ipynb  live_plot.ipynb  parametric_study.ipynb  usertally.ipynb
octave/: __opentrim_oct__.cpp  corteo_xs.cpp  dedx.m  make_oct_bindings.m  screened_coulomb_ip.m  screened_coulomb_sn.m  screened_coulomb_theta.m  screened_coulomb_xs.m  screening_length.m  test_xs.m
source/: CMakeLists.txt  main.cpp
source/cli/: CMakeLists.txt  main.cpp
source/gendoc/: CMakeLists.txt  genoptionsdoc.cpp
source/generators/: CMakeLists.txt  gen_scattering_tbl.cpp  gencorteo.cpp  genoptionsdoc.cpp
source/gui/: CMakeLists.txt  error_fmt.h  floatlineedit.cpp  floatlineedit.h  helppanel.cpp  helppanel.h  main.cpp  mainui.cpp  mainui.h  materialdatabasedialog.cpp  materialdatabasedialog.h  materialsdefview.cpp  materialsdefview.h  mcdriverobj.cpp  mcdriverobj.h  mcplotinfo.cpp  mcplotinfo.h  mydatawidgetmapper.cpp  mydatawidgetmapper.h  opentrim.qrc  optionsmodel.cpp  optionsmodel.h  periodictablewidget.cpp  regionsview.cpp  regionsview.h  resultsview.cpp  resultsview.h  simboxview.cpp  simboxview.h  simcontrolwidget.cpp  simcontrolwidget.h  simulationoptionsview.cpp  simulationoptionsview.h  tabularview.cpp  tabularview.h  usertallyview.cpp  usertallyview.h  value_with_error.h  welcomeview.cpp  welcomeview.h
source/gui/assets/: materials.json
source/gui/assets/data/: materials_database.json  tally_templates.json
source/gui/examples/: 1MeV_H_on_Fe.json  270keV_He_on_C.json  2MeV_Fe_on_Fe.json  3MeV_Xe_on_UO2.json
source/gui/md/: about.md  quick_start.md
source/gui/md/images/: .xdp-intro2.png-Zd3e0P
source/gui/option_def/: options.json
source/gui/styles/: default.qss
source/include/: arrays.h  cascade.h  cascade_queue.h  corteo.h  corteo_xs.h  dedx.h  dedx_calc.h  event_stream.h  flight_path.h  flight_path_calc.h  geometry.h  ion.h  ion_beam.h  json_defs_p.h  mccore.h  mcdriver.h  mcinfo.h  random_vars.h  scattering.h  scattering_tbl.h  tally.h  target.h  user_tally.h  xs.h  xs_corteo.h  xs_tbl2d.h
source/lib/: CMakeLists.txt  cascade.cpp  config_template.json  dedx.cpp  event_stream.cpp  h5serialize.cpp  ion.cpp  ion_beam.cpp  mccore.cpp  mcdriver.cpp  mcinfo.cpp  mcinfo_spec.cpp.in  mcinfo_spec.json  options_spec.cpp.in  options_spec.json  parse_json.cpp  tally.cpp  target.cpp  user_tally.cpp
source/src/: config_template.cpp.in  dedx.cpp  dedx_calc.cpp  event_stream.cpp  flight_path.cpp  flight_path_calc.cpp  gencorteo.cpp  gendedx.cpp  genoptionsdoc.cpp  genptable.cpp  h5serialize.cpp  ion.cpp  ion_beam.cpp  mccore.cpp  mcdriver.cpp  mcinfo.cpp  options_spec.cpp  options_spec.json  parse_json.cpp  straggling.cpp  tally.cpp  target.cpp  user_tally.cpp  version.cpp.in
test/: 3MeV_Xe_on_UO2.h5  README.md
test/icr/: README.md  fe.json  icr1.m  icr2.m  icr3.m  ortiz_2019_fig9.m  run_all.m
test/iradina/b3/output/: b3.disp.sum  b3.disp.z8.m15.999.mat0.elem1  b3.disp.z92.m238.029.mat0.elem0  b3.energy.electronic  b3.energy.phonons  b3.information  b3.int.sum  b3.int.z8.m15.999.mat0.elem1  b3.int.z92.m238.029.mat0.elem0  b3.ions.replacements  b3.ions.total  b3.ions_vac  b3.repl.sum  b3.repl.z8.m15.999.mat0.elem1  b3.repl.z92.m238.029.mat0.elem0  b3.transmitted.ions  b3.vac.sum  b3.vac.z8.m15.999.mat0.elem1  (+1 more)
test/iradina/b4/: Materials.in
test/msc/MW2005/: MW2005-FIG5.csv  MW2005-FIG5.dig  MW2005-FIG6.csv  MW2005-FIG6.dig
test/msc/opentrim/: HeinC.json  HinC.json
test/octave/: Tdam_compare.m  benchmark_compare.m  msc.m  plot_benchmark.m
test/opentrim/: b1.h5  b1.json  b2.h5  b2.json  b3.h5  b3.json  b4.h5  b4.json  b5.h5  b5.json  b6.h5  b6.json  b7.h5  b7.json  b8.h5  b8.json  runall.sh  test_user_tally_coordinates.cpp  test_user_tally_get_bin.cpp
test/opentrim/b1/: config.json
test/opentrim/b2/: config.json
test/opentrim/b3/: config.json
test/opentrim/b4/: config.json
test/opentrim/b5/: config.json
test/opentrim/b6/: config.json
test/opentrim/b7/: config.json
test/opentrim/b8/: config.json
test/post-build/: CMakeLists.txt  compare.cmake  in1.json  in2.json  in3.json  make_templates.sh  out1.h5  out1j1.h5  out1j2.h5  out2.h5  out2j1.h5  out2j2.h5  out3.h5  out3j1.h5  out3j2.h5
test/python/: 1MeV_H_on_Fe.ipynb  1MeV_H_on_Fe.py  270keV_He_on_C.ipynb  270keV_He_on_C.py  2MeV_Fe_on_Fe.ipynb  2MeV_Fe_on_Fe.py  3MeV_Xe_on_UO2.ipynb  3MeV_Xe_on_UO2.py  Example1.ipynb  Example1.json  config.json  conftest.py  json_to_dictionary.ipynb  python_wrapper_opentrim.ipynb  result.h5  test_bindings.py  test_invoke.ipynb
test/scattering_calc/: CMakeLists.txt  main.cpp
test/srim/b2/: E2RECOIL.txt  IONIZ.txt  LATERAL.txt  NOVAC.txt  PHONON.txt  RANGE.txt  TDATA.sav  TDATA.txt  VACANCY.txt
test/srim_comp/: README.md  srim_comp.m  srim_comp_Cu.m  targets.csv
test/usertally/: usertally_test.h5  usertally_test.json  usertally_test.m
test/xs_corteo/: main.cpp
(+347 files in other folders)
