[build-system]
requires      = ["scikit-build-core>=0.11", "pybind11>=3.0"]
build-backend = "scikit_build_core.build"

[project]
name             = "opentrim"
version          = "1.1.2"
requires-python  = ">=3.9"
description      = "Python bindings for the OpenTRIM Monte Carlo ion transport simulator"
dependencies     = ["numpy>=1.21"]

[project.optional-dependencies]
jupyter = ["jupyterlab", "matplotlib"]
test    = ["pytest"]
docs    = ["sphinx"]

[tool.scikit-build]
cmake.args = [
    "-DOPENTRIM_BUILD_GUI=OFF",
    "-DOPENTRIM_BUILD_TESTS=OFF",
    "-DOPENTRIM_BUILD_PYTHON=ON",
]
