add_executable(test_scattering_calc 
    main.cpp
    ${CMAKE_SOURCE_DIR}/source/include/scattering.h
)

target_include_directories(test_scattering_calc 
PRIVATE
    ${CMAKE_SOURCE_DIR}/source/include
)
target_link_libraries(test_scattering_calc
  PRIVATE 
    Eigen3::Eigen
    screened_coulomb
    ieee754_seq
    xs_zbl
    xs_bohr
    xs_krc
    xs_moliere
)